<resources>
    <string name="app_name">Competition Net</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_competition">AddCompetitionActivity</string>

    <string name="main_btn_add_competition">Add Competition</string>
    <string name="main_btn_add_competitor">Add Competitor</string>
    <string name="main_btn_add_match">Add Match</string>
    <string name="main_btn_add_result">Add Result</string>
    <string name="main_btn_list_competitions">List Competitions</string>

    <string name="add_competition_tv_name">Name</string>


    <string name="add_competitor_tv_name">Name</string>
    <string name="add_competitor_tv_image">Image</string>
    <string name="add_competitor_btn_pick_image">Pick Image</string>

    <string name="add_match_tv_home">Home</string>
    <string name="add_match_tv_away">Away</string>

    <string name="btn_add">Add</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="title_activity_competitions">CompetitionsActivity</string>
    <string name="tv_default">Text View</string>
    <string name="title_activity_add_competitor">AddCompetitorActivity</string>
    <string name="title_activity_competitors">CompetitorsActivity</string>

</resources>
