<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:id="@+id/add_competition"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_add_competition"
        android:onClick="startAddCompetition"/>

    <Button
        android:id="@+id/add_competitor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_add_competitor"
        android:onClick="startAddCompetitor"/>

    <Button
        android:id="@+id/list_competitions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_list_competitions"
        android:onClick="startListCompetitions"/>

</LinearLayout>
